# torch-comp

./: .flake8  .gitignore  .lintrunner.toml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: flake8.py
src/torch_comp/: convert.py  wrap_api.py
src/torch_comp.egg-info/: SOURCES.txt  top_level.txt
src/torch_comp/fake_module/: nccl.py
src/torch_comp/torch_comp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_create_tensor.py  test_cuda.py  test_cuda_related.py  test_data_loader.py  test_device.py  test_lazy_init.py  test_to.py  test_torchbench.py  test_val.py
test/test_models/: test_torchbench.py  test_torchvision.py
